--- a/index.html
+++ b/index.html
@@ -136,74 +136,91 @@
             </div>
             <hr />
             <div class="resume-item">
-                <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                <h3 class="resume-item-institute">
-                  Harvard University / 2015 - 2017
-                </h3>
-                <p class="resume-item-description">
-                  List skill/technologies here. You can change the icon above to
-                  any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  commodo ligula eget dolor.
-                </p>
-              </div>
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
             <hr />
             <div class="resume-item">
-                <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                <h3 class="resume-item-institute">
-                  Harvard University / 2015 - 2017
-                </h3>
-                <p class="resume-item-description">
-                  List skill/technologies here. You can change the icon above to
-                  any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  commodo ligula eget dolor.
-                </p>
-              </div>
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
           <div class="resume-column">
             <h3 class="resume-column-title">My Experience</h3>
 
             <div class="resume-item">
-                <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                <h3 class="resume-item-institute">
-                  Harvard University / 2015 - 2017
-                </h3>
-                <p class="resume-item-description">
-                  List skill/technologies here. You can change the icon above to
-                  any of the 1500+ FontAwesome 5 free icons available. Aenean
-                  commodo ligula eget dolor.
-                </p>
-              </div>
-              <hr />
-              <div class="resume-item">
-                  <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                  <h3 class="resume-item-institute">
-                    Harvard University / 2015 - 2017
-                  </h3>
-                  <p class="resume-item-description">
-                    List skill/technologies here. You can change the icon above to
-                    any of the 1500+ FontAwesome 5 free icons available. Aenean
-                    commodo ligula eget dolor.
-                  </p>
-                </div>
-              <hr />
-              <div class="resume-item">
-                  <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                  <h3 class="resume-item-institute">
-                    Harvard University / 2015 - 2017
-                  </h3>
-                  <p class="resume-item-description">
-                    List skill/technologies here. You can change the icon above to
-                    any of the 1500+ FontAwesome 5 free icons available. Aenean
-                    commodo ligula eget dolor.
-                  </p>
-                </div>
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
         </div>
         <div class="download-cv">
-            <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Download CV</button>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h3 class="section-title">Let's Connect</h3>
+        <p class="section-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+          <a href=""><img src="images/icons/facebook.png" alt="" /></a>
+          <a href=""><img src="images/icons/twitter.png" alt="" /></a>
+          <a href=""><img src="images/icons/insta.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let's Message me</h3>
+        <p class="section-description"></p>
+      </div>
+    </footer>
   </body>
 </html>
